--- a/package.json
+++ b/package.json
@@ -57,6 +57,7 @@
     "input-otp": "^1.4.2",
     "lucide-react": "^0.453.0",
     "memorystore": "^1.6.7",
+    "next": "^15.3.1",
     "next-themes": "^0.4.6",
     "nodemailer": "^6.10.1",
     "passport": "^0.7.0",
